# dynd-python

./: .binstar.yml  .clang-format  .gitignore  .gitmodules  .mailmap  .travis.yml  BUILD_INSTALL.md  CMakeLists.txt  FindNumPy.cmake  FindPythonLibsNew.cmake  INSTALL.txt  LICENSE.md  README.md  TESTING.md  appveyor.yml  jenkins_script.txt  jenkins_script_unix.txt  jenkins_script_windows.txt  postprocess.py  setup.py
appveyor/: requirements.txt
blaze/: ndtable.py
blaze/nd/: __init__.py  basic_dtypes.py  dynd_ctypes.py  elwise_gfuncs.py  elwise_kernels.py
blazedynd/: __init__.py
blazedynd/nd/: __init__.py  basic_dtypes.py  elwise_kernels.py  gfunc.py  vm.py
buildscripts/: bdist_wheel.sh  checkout_libdynd.bat  checkout_libdynd.sh  create_conda_pyenv.bat  create_conda_pyenv.sh  create_conda_pyenv_retry.py  jenkins-build  jenkins-build.bat
cmake/: FindLibDyND.cmake  FindNumPy.cmake  FindPythonLibsNew.cmake  PostprocessCython.cmake  UseCython.cmake
conda.recipe/: bld.bat  build.sh  meta.yaml
conda/nd.recipe/: bld.bat  build.sh  meta.yaml
conda/ndt.recipe/: bld.bat  build.sh  meta.yaml
devdocs/: README.md  pyobject-conversion.md
doc/: Makefile  make.bat  release_notes.txt
doc/notebooks/: BlazeDyNDFeatureTour.ipynb  BlazeLocalFeatureTour.ipynb  CategoricalType.ipynb  ComputedFieldsExamples.ipynb  DyNDFeatureTour.ipynb  DyNDObjectStructure.ipynb  JITCompilingToDyNDKernels.ipynb  LowLevelDyND.ipynb  LowLevelViewOfTypes.ipynb  SciPy2013Intro.ipynb
doc/source/: array.rst  conf.py  debugging.rst  dev-frompython.rst  dev.rst  dtype.rst  dtypes.rst  dynd_in_wakari.rst  gfunc.rst  index.rst  ndarray.rst  ndobject.rst  type.rst
docs/: release_notes.txt
docs/notebooks/: CategoricalType.ipynb  ComputedFieldsExamples.ipynb  DyNDFeatureTour.ipynb  JITCompilingToDyNDKernels.ipynb  LowLevelDyND.ipynb  LowLevelViewOfTypes.ipynb  SciPy2013Intro.ipynb
docs/source/: conf.py  debugging.rst  dev-frompython.rst  index.rst  numpy-compat.rst
documents/notebooks/: BlazeLocalFeatureTour.ipynb
dynd/: __init__.py  _pydynd.pxd  _pydynd.pyx  array.pxd  codegen_cache.pxd  config.pxd  config.pxi.in  config.pyx  cuda.pxd  cuda.pyx  dynd._pydynd.pyx  dynd.pxd  elwise_gfunc.pxd  elwise_reduce_gfunc.pxd  eval_context.pxd  eval_context.pyx  gfunc_callable.pxd  ndt_type.pxd  pyobject_type.pxd  translate_except.pxd  type.pxd  vm_elwise_program.pxd  wrapper.pxd
dynd/_lowlevel/: __init__.py  api.py  arrmeta_struct.py  ckernel.py  ctypes_types.py  kind.py  metadata_struct.py  type_id.py  util.py
dynd/benchmarks/: __init__.py  benchmark_arithmetic.py  benchmark_random.py  benchrun.py  benchtime.py
dynd/common/: __init__.py
dynd/cpp/: arithmetic.pxd  array.pxd  callable.pxd  callable_registry.pxd  complex.pxd  config.pxd  functional.pxd  irange.pxd  json_parser.pxd  registry.pxd  type.pxd  view.pxd
dynd/include/: array_as_numpy.hpp  array_as_pep3118.hpp  array_as_py.hpp  array_assign_from_py.hpp  array_conversions.hpp  array_from_py.hpp  array_from_py_dynamic.hpp  array_from_py_typededuction.hpp  array_functions.hpp  arrfunc_from_instantiate_pyfunc.hpp  arrfunc_from_pyfunc.hpp  arrfunc_functions.hpp  assign.hpp  codegen_cache_functions.hpp  config.hpp  conversions.hpp  copy_from_numpy_arrfunc.hpp  copy_from_pyobject_arrfunc.hpp  copy_to_numpy_arrfunc.hpp  copy_to_pyobject_arrfunc.hpp  ctypes_interop.hpp  elwise_gfunc_functions.hpp  elwise_map.hpp  elwise_reduce_gfunc_functions.hpp  eval_context_functions.hpp  exception_translation.hpp  functional.hpp  gfunc_callable_functions.hpp  git_version.hpp  init.hpp  numpy_interop.hpp  numpy_interop_defines.hpp  numpy_type_interop.hpp  numpy_ufunc_kernel.hpp  placement_wrappers.hpp  py_lowlevel_api.hpp  type_conversions.hpp  type_deduction.hpp  type_functions.hpp  type_unpack.hpp  (+4 more)
dynd/kernels/: apply_pyobject_kernel.hpp  copy_from_numpy_kernel.hpp  copy_from_pyobject_kernel.hpp  copy_kernel.hpp  copy_to_pyobject_kernel.hpp  numpy_ufunc.hpp
dynd/lowlevel/: __init__.py  api.py  ctypes_types.py  (+2 more)
include/: array.pxd  array_as_numpy.hpp  array_as_pep3118.hpp  array_as_py.hpp  array_assign_from_py.hpp  array_assign_to_numpy.hpp  array_from_py.hpp  array_from_py_deduction.hpp  array_from_py_dynamic.hpp  array_from_py_typededuction.hpp  array_functions.hpp  arrfunc_from_instantiate_pyfunc.hpp  arrfunc_from_pyfunc.hpp  arrfunc_functions.hpp  ckernel_deferred_from_pyfunc.hpp  codegen_cache.pxd  codegen_cache_functions.hpp  copy_from_numpy_arrfunc.hpp  copy_from_pyobject_arrfunc.hpp  copy_to_numpy_arrfunc.hpp  copy_to_pyobject_arrfunc.hpp  copy_to_pyobject_ckernel.hpp  ctypes_interop.hpp  dnd.pxd  dtype.pxd  dtype_functions.hpp  dynd.pxd  elwise_gfunc.pxd  elwise_gfunc_functions.hpp  elwise_map.hpp  elwise_reduce_gfunc.pxd  elwise_reduce_gfunc_functions.hpp  eval_context.pxd  eval_context_functions.hpp  exception_translation.hpp  gfunc_callable.pxd  gfunc_callable_functions.hpp  git_version.hpp  init.hpp  ndarray.pxd  (+19 more)
jenkins/: build.sh  checkout_libdynd.bat  checkout_libdynd.sh  create_conda_pyenv.bat  create_conda_pyenv.sh  jenkins-build  jenkins-build.bat
src/: _pydnd.pyx  _pydynd.pyx  array_as_numpy.cpp  array_as_pep3118.cpp  array_as_py.cpp  array_assign_from_py.cpp  array_assign_to_numpy.cpp  array_from_py.cpp  array_from_py_deduction.cpp  array_from_py_dynamic.cpp  array_from_py_typededuction.cpp  array_functions.cpp  arrfunc_from_instantiate_pyfunc.cpp  arrfunc_from_pyfunc.cpp  arrfunc_functions.cpp  ckernel_deferred_from_pyfunc.cpp  codegen_cache_functions.cpp  copy_from_numpy_arrfunc.cpp  copy_from_pyobject_arrfunc.cpp  copy_to_numpy_arrfunc.cpp  copy_to_pyobject_arrfunc.cpp  copy_to_pyobject_ckernel.cpp  ctypes_interop.cpp  dtype_functions.cpp  dynd._pydynd.pyx  elwise_gfunc_functions.cpp  elwise_map.cpp  elwise_reduce_gfunc_functions.cpp  eval_context_functions.cpp  exception_translation.cpp  gfunc_callable_functions.cpp  git_version.cpp.in  init.cpp  ndarray_as_py.cpp  ndarray_from_py.cpp  ndarray_functions.cpp  ndobject_as_numpy.cpp  ndobject_as_pep3118.cpp  ndobject_as_py.cpp  ndobject_assign_from_py.cpp  (+8 more)
vagrant/: .gitignore  README.md
(+254 files in other folders)
